--- a/src/config/fonts/styles.css
+++ b/src/config/fonts/styles.css
@@ -3,12 +3,12 @@
 /* Regular */
 @font-face {
     font-family: 'Gilroy';
-    src: url('gilroy/gilroy-regular/gilroy-regular.eot');
+    src: url('gilroy-regular.eot');
     src: local('Gilroy'), local('Gilroy-Regular'),
-    url('gilroy/gilroy-regular/gilroy-regular.eot?')
+    url('gilroy-regular.eot?')
     format('embedded-opentype'),
-    url('gilroy/gilroy-regular/gilroy-regular.woff') format('woff'),
-    url('gilroy/gilroy-regular/gilroy-regular.ttf') format('truetype');
+    url('gilroy-regular.woff') format('woff'),
+    url('gilroy-regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -17,12 +17,12 @@
 /* Medium */
 @font-face {
     font-family: 'Gilroy';
-    src: url('gilroy/gilroy-medium/gilroy-medium.eot');
+    src: url('gilroy-medium.eot');
     src: local('Gilroy Medium'), local('Gilroy-Medium'),
-    url('gilroy/gilroy-medium/gilroy-medium.eot?')
+    url('gilroy-medium.eot?')
     format('embedded-opentype'),
-    url('gilroy/gilroy-medium/gilroy-medium.woff') format('woff'),
-    url('gilroy/gilroy-medium/gilroy-medium.ttf') format('truetype');
+    url('gilroy-medium.woff') format('woff'),
+    url('gilroy-medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -31,12 +31,12 @@
 /* Semi bold */
 @font-face {
     font-family: 'Gilroy';
-    src: url('gilroy/gilroy-semibold/gilroy-semibold.eot');
+    src: url('gilroy-semibold.eot');
     src: local('Gilroy Semi Bold'), local('Gilroy-SemiBold'),
-    url('gilroy/gilroy-semibold/gilroy-semibold.eot?')
+    url('gilroy-semibold.eot?')
     format('embedded-opentype'),
-    url('gilroy/gilroy-semibold/gilroy-semibold.woff') format('woff'),
-    url('gilroy/gilroy-semibold/gilroy-semibold.ttf') format('truetype');
+    url('gilroy-semibold.woff') format('woff'),
+    url('gilroy-semibold.ttf') format('truetype');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
@@ -45,11 +45,11 @@
 /* Bold */
 @font-face {
     font-family: 'Gilroy';
-    src: url('gilroy/gilroy-bold/gilroy-bold.eot');
+    src: url('gilroy-bold.eot');
     src: local('Gilroy Bold'), local('Gilroy-Bold'),
-    url('gilroy/gilroy-bold/gilroy-bold.eot?') format('embedded-opentype'),
-    url('gilroy/gilroy-bold/gilroy-bold.woff') format('woff'),
-    url('gilroy/gilroy-bold/gilroy-bold.ttf') format('truetype');
+    url('gilroy-bold.eot?') format('embedded-opentype'),
+    url('gilroy-bold.woff') format('woff'),
+    url('gilroy-bold.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
     font-display: swap;
@@ -58,12 +58,12 @@
 /* Extra bold */
 @font-face {
     font-family: 'Gilroy';
-    src: url('gilroy/gilroy-extrabold/gilroy-extrabold.eot');
+    src: url('gilroy-extrabold.eot');
     src: local('Gilroy Extra Bold'), local('Gilroy-ExtraBold'),
-    url('gilroy/gilroy-extrabold/gilroy-extrabold.eot?')
+    url('gilroy-extrabold.eot?')
     format('embedded-opentype'),
-    url('gilroy/gilroy-extrabold/gilroy-extrabold.woff') format('woff'),
-    url('gilroy/gilroy-extrabold/gilroy-extrabold.ttf') format('truetype');
+    url('gilroy-extrabold.woff') format('woff'),
+    url('gilroy-extrabold.ttf') format('truetype');
     font-weight: 800;
     font-style: normal;
     font-display: swap;
@@ -72,12 +72,12 @@
 /* Black */
 @font-face {
     font-family: 'Gilroy';
-    src: url('gilroy/gilroy-black/gilroy-black.eot');
+    src: url('gilroy-black.eot');
     src: local('Gilroy Black'), local('Gilroy-Black'),
-    url('gilroy/gilroy-black/gilroy-black.eot?')
+    url('gilroy-black.eot?')
     format('embedded-opentype'),
-    url('gilroy/gilroy-black/gilroy-black.woff') format('woff'),
-    url('gilroy/gilroy-black/gilroy-black.ttf') format('truetype');
+    url('gilroy-black.woff') format('woff'),
+    url('gilroy-black.ttf') format('truetype');
     font-weight: 900;
     font-style: normal;
     font-display: swap;
